remove java 8 feature