@@ -3,9 +3,9 @@ package com.fc.queue.model;
 import com.mongodb.DBObject;
 import lombok.*;
 
+import javax.xml.bind.DatatypeConverter;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.Base64;
 
 /**
  * Created by fc on 14-11-1.
@@ -44,7 +44,7 @@ public class URLRequest {
             MessageDigest sha256 = MessageDigest.getInstance("SHA-256");
             byte[] passBytes = str.getBytes();
             byte[] passHash = sha256.digest(passBytes);
-            return Base64.getEncoder().encodeToString(passHash);
+            return DatatypeConverter.printBase64Binary(passHash);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
